creating Heroku app

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,15 @@
 		        -1.5px 1.5px 0 #000,
 		        1.5px 1.5px 0 #000;
       }
+      h3 {
+        color: whitesmoke;
+        font-size: 20px;
+        text-shadow:
+		        -1px -1px 0 #000,
+		        1px -1px 0 #000,
+		        -1px 1px 0 #000,
+		        1px 1px 0 #000;
+      }
       h5 {
         background: red;
         margin-bottom: 0%;
@@ -53,6 +62,7 @@
         align-content: center;
         margin-bottom: 0%;
         padding: 2%;
+        font-size: 18px;
       }
       #notes {
         font-family: 'Patrick Hand', cursive;
@@ -83,6 +93,7 @@
     <div id="wrapper">
       <h1 style="text-align:center">sportScraper</h1>
       <h2 style="text-align:center"><i>you ... can ... read .. all ... these ... pages!</i></h2>
+      <h3 style="text-align: center"><i>(in your best Chris Berman voice...)</i></h3>
       <div id="notes"></div>
       <div id="articles"></div>
     </div>
